Remove no longer needed spacing in groups

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -124,7 +124,7 @@ div.question-answer[data-reviewed] a { text-decoration: underline; }
 /* misc templates */
 .task-progress-project-truncate { margin: 12px auto 12px auto; text-align: center; }
 .task-progress-project-url { color:#444; }
-.task-progress-project-group { margin: 0 0 6px 0; padding: 2px; font-size: 1.0em;text-align:left; }
+.task-progress-project-group { margin: 0 0 0 0; padding: 0px; font-size: 1.0em; text-align:left; }
 .task-progress-project-question { font-size: 10px; line-height: 120%; padding-left: 2em; color: #222; }
 .task-progress-project-title { color: black; font-size: 1.0em; text-align: left; }
 .task-progress-project-truncate-link { color: black; }
